arraylist to hashmap in users, hotels, rooms